--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,141 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+/*CSS for home page*/
+.container {
+	margin: 0 auto;
+	width: 66%;
+}
+
+header {
+
+}
+
+nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 15px 0;
+}
+
+nav a {
+	text-decoration: none;
+}
+
+.innovation {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	margin: 15px 0;
+}
+
+h1 {
+	font-size:70px;
+	text-align: center;
+	margin-bottom: 10px;
+}
+header div button {
+	text-align: center;
+	margin-left: 100px;
+}
+
+.top_section {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	/*border-top: 1px solid black;*/
+	padding: 15px 0;
+}
+
+.middle_section {
+	 display: flex;
+	 flex-direction: row;
+	 justify-content: space-between;
+	 border-bottom: 1px solid black;
+	 margin-bottom: 25px;
+	 padding: 25px 0;
+}
+
+section div.product {
+	 margin: 0 15px;
+}
+
+.section_bottom {
+     margin-bottom: 25px;
+}
+
+footer {
+	 padding-bottom: 50px;
+}
+
+footer p {
+	 text-align: center;
+	 margin-top: 50px;
+}
 
