meta veiwport element is added

--- a/css/index.css
+++ b/css/index.css
@@ -71,10 +71,6 @@ h1, h2, h3, h4, h5 {
 	width: 66%;
 }
 
-header {
-
-}
-
 nav {
     display: flex;
     flex-direction: row;
@@ -109,15 +105,19 @@ header div button {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	/*border-top: 1px solid black;*/
+	border-top: 1.4px solid black;
 	padding: 15px 0;
+}
+
+.middle-img {
+    margin: 20px 0;
 }
 
 .middle_section {
 	 display: flex;
 	 flex-direction: row;
 	 justify-content: space-between;
-	 border-bottom: 1px solid black;
+	 border-bottom: 1.4px solid black;
 	 margin-bottom: 25px;
 	 padding: 25px 0;
 }
