--- a/css/index.css
+++ b/css/index.css
@@ -153,6 +153,7 @@ footer p {
 	 margin-top: 50px;
 }
 
+
 /* tablet css */
 
 @media (max-width: 800px) {
@@ -248,5 +249,43 @@ footer p {
         margin: 50px 0;
     }
 
-    
+    .middle-img {
+        display: block;
+        margin: 0 auto;
+        width: 92%;
+    }
+
+    .top_section {
+        width: 92%;
+        margin: 0 auto;
+        display: block;
+        border-top: 2px solid black;
+        padding: 15px 0;
+    }
+
+    .features {
+        margin-top: 25px;
+    }
+
+    .about {
+        margin-top: 25px;
+    }
+
+    .middle_section {
+        width: 92%;
+        margin: 0 auto;
+        display: block;
+        border-bottom: 2px solid black;
+        margin-bottom: 25px;
+        padding: 25px 0;
+   }
+
+   section div.product {
+    margin: 35px 0;
+   }
+
+   .section_bottom {
+    width: 92%;
+    margin: 0 auto;
+}
 }
